vite and vue integration

--- a/pokedex_site/pokedex/templates/pokedex/index.html
+++ b/pokedex_site/pokedex/templates/pokedex/index.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 <div class="grid grid-cols-3 gap-4">
-    {% include "./items.html" with data=pokemons %}
+    <app-items :data-item="{{ pokemons }}"></app-items>
 </div>
 {% endblock %}
