--- a/pokedex_site/pokedex/templates/pokedex/layout.html
+++ b/pokedex_site/pokedex/templates/pokedex/layout.html
@@ -1,3 +1,5 @@
+{% load django_vite %}
+
 <!DOCTYPE html>
 <html lang="sp">
     <head>
@@ -6,11 +8,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
         <script src="https://cdn.tailwindcss.com"></script>
+
+        {% vite_hmr_client %}
+        {% vite_asset 'src/main.js' %}
     </head>
     <body>
         <div id="app">
             <!-- The Nav -->
-            {% include "./navbar.html" %}
+            <app-navbar></app-navbar>
 
             <!-- Content -->
             <div class="container mx-auto">
@@ -19,7 +24,7 @@
             </div>
 
             <!-- The Footer -->
-            {% include "./footer.html" %}
+            <app-footer></app-footer>
         </div>
     </body>
 </html>
